<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/food_query"
        android:textSize="15sp"/>
    <EditText
        android:id="@+id/foodEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:layout_marginBottom="7sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_query"
        android:textSize="15sp"/>
    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionGo"
        android:inputType="text"
        android:layout_marginBottom="7sp"/>
    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/search_button"/>
    <!--<ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:visibility="gone" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
            <RelativeLayout
                android:id="@+id/responseRL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">
                <ImageView
                    android:id="@+id/businessImage"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/businessName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/businessImage"
                    android:layout_toEndOf="@id/businessImage"
                    android:textSize="17sp"/>
                <ImageView
                    android:id="@+id/businessRatingImage"
                    android:layout_width="100dp"
                    android:layout_height="25dp"
                    android:paddingRight="5dp"
                    android:layout_toRightOf="@id/businessImage"
                    android:layout_toEndOf="@id/businessImage"
                    android:layout_below="@id/businessName"/>
                <TextView
                    android:id="@+id/businessReviewCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/businessRatingImage"
                    android:layout_toEndOf="@id/businessRatingImage"
                    android:layout_below="@id/businessName"/>
                <TextView
                    android:id="@+id/businessAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/businessImage"
                    android:layout_toEndOf="@id/businessImage"
                    android:layout_below="@id/businessRatingImage" />
                <TextView
                    android:id="@+id/businessCategories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/businessImage"
                    android:layout_toEndOf="@id/businessImage"
                    android:layout_below="@id/businessAddress" />
            </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/yelpRL"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10sp">
        <TextView
            android:id="@+id/yelpDisplayRequirement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/yelp_display_requirement"/>
        <ImageView
            android:id="@+id/yelpLogo"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:src="@drawable/yelp_logo"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_alignTop="@id/yelpDisplayRequirement"
            android:layout_alignBottom="@+id/yelpDisplayRequirement"
            android:layout_toRightOf="@+id/yelpDisplayRequirement"/>
    </RelativeLayout>

    <Button
        android:id="@+id/businessMobileURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/responseRL"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/mobile_url"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>
</LinearLayout>